Tweak spacing issues

--- a/src/Components/About/About.sass
+++ b/src/Components/About/About.sass
@@ -5,25 +5,21 @@
   flex-direction: column-reverse
   justify-content: space-evenly
   align-items: center
-  @media(min-width: 767px)
+  @media(min-width: $tablet-width)
     flex-direction: row
-    height: 70vh;
     align-items: flex-start;
-  @media(min-width: 1120px)
-    align-items: center;
-    height: 90vh;
   &__imgContainer
     width: 90%
     display: flex
     justify-content: center
-    padding-top: 20px;
-    @media(min-width: $tablet-width)
+    padding-top: 10px;
+    @media(min-width: $tablet-width )
       width: 45%
   &__img
     height: 240px
-    @media(min-width: 767px )
+    @media(min-width: $tablet-width )
       height: 420px
-    @media(min-width: 1120px )
+    @media(min-width: $max-desktopWidth )
       height: 610px
       
     animation: float 2s alternate infinite
@@ -33,7 +29,6 @@
     display: flex
     flex-direction: column
     align-items: center
-    width: 90%
     @media(min-width: $tablet-width)
       width: 45%
   &__title
@@ -43,7 +38,7 @@
     -webkit-background-clip: text
     -webkit-text-fill-color: transparent
     margin: 0
-    @media(min-width: 1120px)
+    @media(min-width: $max-desktopWidth)
       font-size: 45px
   &__info
     margin: 25px auto 0
@@ -52,7 +47,7 @@
     @include font-canada-type-gibson($size: 16px, $weight: 200, $color: #fff, $lh: 1.3, $style: normal);
     @media(min-width: $tablet-width)
       font-size: 20px
-    @media(min-width: 1120px)
+    @media(min-width: $max-desktopWidth)
       font-size: 25px
 
   &__details
@@ -72,9 +67,9 @@
     margin: 0
     align-self: flex-start
     @include font-canada-type-gibson($size: 16px, $weight: 200, $color: #fff, $lh: 1.3, $style: normal)
-    @media(mmin-width: 767px)
+    @media(mmin-width: $tablet-width)
       font-size: 20px
-    @media(min-width: 1120px)
+    @media(min-width: $max-desktopWidth)
       font-size: 25px
   &__detailInfo span
     font-weight: 900
