--- a/src/Components/Track/Track.sass
+++ b/src/Components/Track/Track.sass
@@ -8,16 +8,16 @@
   align-items: center;
   margin: 0 auto;
   flex-basis: 100%
-  @media(min-width: 767px)
+  @media(min-width: $tablet-width)
       flex-basis: 50%
-  @media(min-width: 1120px)
+  @media(min-width: $max-desktopWidth)
       flex-basis: 33%
   &__img
     height: 240px
-    @media(min-width: 767px)
-      height: 350px
-    @media(min-width: 1120px)
-      height: 420px
+    @media(min-width: $tablet-width)
+      height: 300px
+    @media(min-width: $max-desktopWidth)
+      height: 360px
   
   &__body
     @include font-canada-type-gibson($size: 16px, $weight: 200, $color: #fff, $lh: 1.3, $style: normal);
@@ -27,13 +27,13 @@
   &__title
     font-weight: 900;
     font-size: 20px;
-    @media(min-width: 767px)
+    @media(min-width: $tablet-width)
      font-size: 25px;
-    @media(min-width: 1120px)
+    @media(min-width: $max-desktopWidth)
       font-size: 30px;
 
   &__text
-    @media(min-width: 767px)
+    @media(min-width: $tablet-width)
      font-size: 20px;
-    @media(min-width: 1120px)
+    @media(min-width: $max-desktopWidth)
       font-size: 25px;
